--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,13 @@ jobs:
         pip install numpy torch rdkit
         pip install pytest pytest-cov
 
+    - name: Add project root to Python path
+      run: echo "PYTHONPATH=$PYTHONPATH:${{ github.workspace }}" >> $GITHUB_ENV
+
     - name: Run tests and collect coverage
-      run: pytest
+      run: |
+      cd ${{ github.workspace }}
+      pytest
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4-beta
       env:
