--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         pip install pytest pytest-cov
 
     - name: Run tests and collect coverage
-      run: pytest
-      
+      run: pytest --cov=DirectMultiStep
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4-beta
       env:
