--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy torch rdkit
+        pip install numpy torch rdkit pyyaml
         pip install pytest pytest-cov
 
     - name: Run tests and collect coverage
