--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,18 +1,10 @@
 name: Code Quality
 on: [push, pull_request]
-
 jobs:
-  build:
+  ruff:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: "3.11"
-    - run: pip install --upgrade pip
-    - run: pip install ruff mypy black pytest
-    - run: black .
-    - run: ruff format
-    - run: ruff check --fix
-    - run: mypy --strict . --exclude=tests
-    - run: pytest -v
+      - uses: actions/checkout@v4
+      - uses: chartboost/ruff-action@v1
+        with:
+          args: 'check --fix && ruff format'
