--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,8 +1,35 @@
 name: Code Quality
+
 on: [push, pull_request]
+
 jobs:
-  ruff:
+  qualitycheck:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: chartboost/ruff-action@v1
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install numpy torch rdkit pyyaml
+        pip install pytest pytest-cov
+        pip install mypy black isort ruff
+
+    - name : Run ruff
+      run: ruff check
+    - name: Run black
+      run: black --check .
+    - name: Run isort
+      run: isort --check --profile black .
+    - name: Run mypy
+      run: mypy --strict . --exclude=tests
+
+    - name: Run tests and collect coverage
+      run: pytest -v
