--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy torch rdkit pyyaml
-        pip install pytest pytest-cov
+        pip install numpy torch rdkit==2023.09.3 pyyaml
+        pip install pytest pytest-cov lightning
         pip install mypy black isort ruff types-requests types-tqdm types-PyYAML
 
     - name : Run ruff
