--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy torch rdkit==2023.09.3 pyyaml
-        pip install pytest pytest-cov lightning
+        pip install numpy==1.24.3 torch==2.3.0 rdkit==2023.09.3 pyyaml==6.0
+        pip install pytest pytest-cov lightning==2.2.25 pycairo==1.26.0 cairosvg==2.7.1
         pip install mypy black isort ruff types-requests types-tqdm types-PyYAML
 
     - name : Run ruff
