--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -15,21 +15,41 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: Install uv
       run: |
-        python -m pip install --upgrade pip
-        pip install numpy==1.24.3 torch==2.3.0 rdkit==2023.09.3 pyyaml==6.0
-        pip install pytest pytest-cov lightning==2.2.5 pycairo==1.26.0 cairosvg==2.7.1
-        pip install mypy black isort ruff types-requests types-tqdm types-PyYAML
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-    - name : Run ruff
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/uv
+          ~/.uv
+          .venv
+        key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
+
+    - name: Create and activate virtual environment
+      run: |
+        uv venv
+        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+
+    - name: Install dependencies
+      run: uv pip install -e ".[dev]"
+
+    - name: Run ruff (linter)
       run: ruff check
-    - name: Run black
-      run: black --check .
+
+    - name: Run ruff (formatter)
+      run: ruff format --check
+
     - name: Run isort
       run: isort --check --profile black .
+
     - name: Run mypy
-      run: mypy --strict . --exclude=tests
+      run: mypy .
 
     - name: Run tests
       run: pytest -v
