--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,28 @@
 site_name: DirectMultiStep Docs
+repo_url: https://github.com/batistagroup/DirectMultiStep
+repo_name: batistagroup/DirectMultiStep
+copyright: CC-BY 4.0 &copy; 2025 Batista Group
 theme:
   name: material
   features:
     - content.code.copy
+  palette:
+      # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+extra_css:
+- stylesheets/extra.css
 
 plugins:
 - search
