--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "mkdocs==1.6.1",
     "mkdocstrings-python==1.12.2",
     "mkdocs-material==9.5.49",
+    "material-plausible-plugin>=0.3.0",
     "pytest==8.3.4",
     "ruff==0.4.7",
     "mypy==1.13.0",
