--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,15 +16,10 @@ repos:
         language: python
         types: [python]
 
-      - id: isort
-        name: isort
-        entry: isort
-        language: python
-        types: [python]
-        args: [--profile=black]
-
       - id: mypy
         name: mypy
         entry: mypy
         language: system
         types: [python]
+        exclude: ^(tests/)
+        args: ["--config-file=pyproject.toml"]
