--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ requires-python = ">=3.11"
 dependencies = [
     "numpy>=1.26.4",
     "pandas>=1.5.3",
-    "pdoc3>=0.11.5",
     "plotly>=5.24.1",
     "lightning>=2.2.5",
     "pyyaml>=6.0.1",
@@ -47,8 +46,7 @@ dev = [
     "material-plausible-plugin>=0.3.0",
     "pytest==8.3.4",
     "ruff==0.4.7",
-    "mypy==1.13.0",
-    "isort==5.13.2",
+    "mypy>=1.17.0",
     "typing-extensions==4.12.2",
     "mypy-extensions==1.0.0",
     "types-pyyaml",
