--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,12 @@ requires-python = ">=3.11"
 dependencies = [
     "numpy>=1.26.4",
     "pandas>=1.5.3",
-    "plotly>=5.24.1",
     "lightning>=2.2.5",
     "pyyaml>=6.0.1",
     "rdkit>=2023.9.3",
     "torch>=2.3.0",
-    "torchmetrics>=1.6.0",
     "tqdm>=4.67.1",
-    "svgwrite>=1.4.3",
-    "svglib>=1.5.1",
-    "tomli>=2.2.1",
+    
 ]
 authors = [
     { name = "Anton Morgunov", email = "anton@ischemist.com" },
@@ -39,19 +35,24 @@ dev = [
     "nbformat>=5.10.4",
     "rich>=13.9.4",
     "kaleido==0.2.1",
-    "pre-commit==4.0.1",
-    "mkdocs==1.6.1",
-    "mkdocstrings-python==1.12.2",
-    "mkdocs-material==9.5.49",
+    "pre-commit>=4.0.1",
+    "mkdocs>=1.6.1",
+    "mkdocstrings-python>=1.12.2",
+    "mkdocs-material>=9.5.49",
     "material-plausible-plugin>=0.3.0",
-    "pytest==8.3.4",
-    "ruff==0.4.7",
+    "pytest>=8.3.4",
+    "ruff>=0.12.5",
     "mypy>=1.17.0",
-    "typing-extensions==4.12.2",
-    "mypy-extensions==1.0.0",
+    "typing-extensions>=4.12.2",
+    "mypy-extensions>=1.0.0",
     "types-pyyaml",
     "types-tqdm",
     "types-requests",
+]
+vis = [
+"svgwrite>=1.4.3",
+    "svglib>=1.5.1",
+    "plotly>=5.24.1",
 ]
 
 [tool.mypy]
