STYLE: bump ruff version, add extra linting rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,4 +67,14 @@ ignore_errors = true
 
 [tool.ruff]
 line-length = 120
+lint.select = [
+    "E",   # pycodestyle
+    "F",   # Pyflakes
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "SIM", # flake8-simplify
+    "I",   # isort
+]
+lint.ignore = ["E501"] 
+
 
