--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,7 +36,7 @@ jobs:
         echo "$PWD/.venv/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
-      run: uv pip install -e ".[dev]"
+      run: uv sync
 
     - name: Run tests
       run: pytest -v 
