--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,19 +1,18 @@
-name: Code Quality
+name: Tests
 
-on: [push, pull_request]
-
+on: [pull_request]
 jobs:
-  qualitycheck:
+  test:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Set up Python 3.11
+    - name: Set up Python 3.13
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: '3.13'
 
     - name: Install uv
       run: |
@@ -37,19 +36,7 @@ jobs:
         echo "$PWD/.venv/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
-      run: uv pip install -e ".[dev]"
-
-    - name: Run ruff (linter)
-      run: ruff check
-
-    - name: Run ruff (formatter)
-      run: ruff format --check
-
-    - name: Run isort
-      run: isort --check --profile black .
-
-    - name: Run mypy
-      run: mypy .
+      run: uv sync
 
     - name: Run tests
-      run: pytest -v
+      run: pytest -v 
