feat: support for batched generation (#21)
* tests: test beam search results

* dev: resolve lint issues

* dev: develop batched beam

* dev: seems to be working somewhat

* dev: now def seems to work

* dev: harder beam script

* dev: pad the noSM inputs

* tests: add pharma based test

* dev: upd run script

* dev: patch the colection of non-batched

* dev: expose both copies vec and nonvec

* dev: add vec nonvec comparison test

* dev: try s4.5

* dev: tr2

* tests: more vec non vec tests

* patch test

* patch more tests

* dev: switch to vectorized

* dev: parity achieved LMAO

* dev: upd script

* dev: higher beam for last test

* dev: remove the slow one

* dev: add b50 test

* dev: make sure the reusable tensors are re-initialized

* dev: make sure the reusable tensors are re-initialized

* dev: try v2

* dev: drop old batch and clean tests

* dev: don't even import it

* dev: yet another fix and dont run CI on pushes to non-master

* dev: fix indentation for last test

* dev: that's it folks, sonnet 4.5

* dev: infer dtypes for fp16

* feat: well one eternity later, is it working

* clean up

* rename for clarity

* respond to rabbit's comments

* remove unused code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "rdkit>=2023.9.3",
     "torch>=2.3.0",
     "tqdm>=4.67.1",
-    
+
 ]
 authors = [
     { name = "Anton Morgunov", email = "anton@ischemist.com" },
@@ -80,6 +80,7 @@ lint.select = [
     "SIM", # flake8-simplify
     "I",   # isort
 ]
-lint.ignore = ["E501"] 
+lint.ignore = ["E501"]
 
-
+[tool.pytest.ini_options]
+addopts = "-m 'not ckptreq'"
